data/derived/comb/progs/unify/prog4031.ml.out
Characters 202-215:
  else y::digitsOfInt x;;
          ^^^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int list
